# calmar

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: calendar.rs  config.rs  event.rs  main.rs  repl.rs  test.rs  validator.rs  verifier.rs
src/cal/: calendar.rs  calendar_index.rs  calendar_ref.rs  calmar_error.rs  calmar_trait.rs  config.rs  deadline.rs  event.rs  getconfig.rs  getdata.rs  macros.rs  savedata.rs  trait.rs  util.rs  validator.rs
src/cli/: commands.rs  config.rs  display.rs  functions.rs  getdata.rs  help.rs  macros.rs  messages.rs  parser.rs  repl.rs  util.rs  validator.rs
src/repl/: event.rs  help.rs  parser.rs
src/repl/parser/: getdata.rs  help.rs  savedata.rs
src/test/: test.rs
