[package]
name = "calmar"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
home = "0.5.3"
colored = "2.0.0"
regex = "1.5.6"
lazy_static = "1.4.0"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
struct-field-names-as-array = "0.1.3"