[package]
name = "calmar"
version = "0.11.0"
edition = "2021"
authors = ["Michał Miłek <https://gitlab.com/mmilek>", "Artur Gulik <https://gitlab.com/ArturGulik>"]
description = "A fast, easy to use calendar/scheduling program."
readme = "README.md"
repository = "https://gitlab.com/calmar-team/calmar"
license = "LICENSE"
keywords = ["calendar", "scheduling", "planning", "university", "cli"]



[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
home = "0.5.3"
colored = "2.0.0"
regex = "1.5.6"
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.85"
serde_derive = "1.0.144"
serde_with = {version = "2.0.1", features = ["chrono"]}
struct-field-names-as-array = "0.1.3"
rustyline = "10.0.0"
tabled = {version = "0.8.0", features = ["color"]}
unicode-segmentation = "1.10.0"